syntax = "proto3";
package calculator;
option go_package = "/calculatorpb";
message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}
message SumResponse {
    int32 sum_result = 1;
}
service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    // error handling
    // this RPC will throw an exception if the sent number is negative
    // The error being sent is of type INVALID_ARGUMENT
 //   rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}

